--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 #gitignore
 .env
-__pycache__/
+src/__pycache__/
 .env.local
 .venv
 venv/
+src/test/
+data_cache/
+data/
+src/db/data_cache/
+src/db/data_loader.log
