--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.3.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
@@ -28,7 +29,9 @@ cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
 defusedxml==0.7.1
+dotenv==0.9.9
 ecos==2.0.14
+et_xmlfile==2.0.0
 executing==2.2.1
 fastjsonschema==2.21.2
 filelock==3.19.1
@@ -45,6 +48,7 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+immutabledict==4.2.2
 ipykernel==7.1.0
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
@@ -81,9 +85,12 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.5
+nltk==3.9.2
 notebook_shim==0.2.4
 numpy==2.3.4
 nvidia-nccl-cu12==2.28.7
+openpyxl==3.1.5
+ortools==9.14.6206
 osqp==1.0.5
 packaging==25.0
 pandas==2.3.3
@@ -97,7 +104,7 @@ plotly==5.24.1
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 propcache==0.4.1
-protobuf==6.33.0
+protobuf==6.31.1
 psutil==7.1.2
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
@@ -118,6 +125,7 @@ PyYAML==6.0.3
 pyzmq==27.1.0
 QuantStats==0.0.77
 referencing==0.37.0
+regex==2025.11.3
 requests==2.32.5
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -142,6 +150,7 @@ ta==0.11.0
 tabulate==0.9.0
 tenacity==9.1.2
 terminado==0.18.1
+textblob==0.19.0
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 toml==0.10.2
