--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ executing==2.2.1
 fastjsonschema==2.21.2
 filelock==3.19.1
 finnhub-python==2.4.25
+Flask==3.1.2
 fonttools==4.60.1
 fqdn==1.5.1
 frozendict==2.4.6
@@ -53,6 +54,7 @@ ipykernel==7.1.0
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.2
@@ -168,6 +170,7 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.9.0
 websockets==15.0.1
+Werkzeug==3.1.3
 xgboost==3.1.1
 yarl==1.22.0
 yfinance==0.2.66
